--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   <h2>Y otros servicios</h2>
 
   <div class="imagenes">
-    <a href="servicios.html"></a><img src="IMAGENES/declaracionrenta.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html"></a><img src="IMAGENES/Herencias.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html"><img src="IMAGENES/declaracionrenta.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html"><img src="IMAGENES/Herencias.png" alt="Error al cargar la imagen"></a>
   </div>
 
   <h2>¿Por qué elegirnos?</h2>
