--- a/contacto.html
+++ b/contacto.html
@@ -23,6 +23,8 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav> 
+     <!-- Botón hamburguesa -->
+    <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
 </header>
 
 <section class="extra-section">
