--- a/servicios.html
+++ b/servicios.html
@@ -14,19 +14,21 @@
 <body>
   <header>
     <div class="logo">
-      <img src="IMAGENES/logow.png" alt="Logo" />
+        <img src="IMAGENES/logow.png" alt="Logo">
     </div>
 
     <!-- Menú de navegación -->
     <nav class="nav">
-      <ul class="menu">
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="servicios.html" class="active">Servicios</a></li>
-        <li><a href="equipo.html">Equipo</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+        <ul class="menu">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="equipo.html">Equipo</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
     </nav>
-  </header>
+        <!-- Botón hamburguesa -->
+    <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
+</header>
 
  <section id="introduccion">
     <h2>Nuestros servicios</h2>
