--- a/servicios.html
+++ b/servicios.html
@@ -136,5 +136,15 @@
       </p>
       <a href="contacto.html" class="cta-button">Solicita Presupuesto</a>
     </div>
+<script>
+        document.addEventListener("DOMContentLoaded", function () {
+    const toggleButton = document.querySelector(".menu-toggle");
+    const nav = document.querySelector(".nav");
+
+    toggleButton.addEventListener("click", function () {
+        nav.classList.toggle("active"); 
+    });
+});
+</script>
 </body>
 </html>
