--- a/contacto.html
+++ b/contacto.html
@@ -123,7 +123,16 @@
 
   window.addEventListener('load', startAutoScroll);
 </script>
+<script>
+        document.addEventListener("DOMContentLoaded", function () {
+    const toggleButton = document.querySelector(".menu-toggle");
+    const nav = document.querySelector(".nav");
 
+    toggleButton.addEventListener("click", function () {
+        nav.classList.toggle("active"); 
+    });
+});
+</script>
       
 </body>
 </html>
