--- a/contacto.html
+++ b/contacto.html
@@ -30,10 +30,15 @@
 <section class="extra-section">
     <div class="container">
         <div class="map-responsive">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.2966412736923!2d-3.3286219244650574!3d40.55712604708323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd424c8f591ece6d%3A0x3f5f7e41ad666970!2sAsesor%C3%ADa%20Vidal!5e0!3m2!1ses!2ses!4v1751476390956!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-
-</div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.2966412736923!2d-3.3286219244650574!3d40.55712604708323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd424c8f591ece6d%3A0x3f5f7e41ad666970!2sAsesor%C3%ADa%20Vidal!5e0!3m2!1ses!2ses!4v1751476390956!5m2!1ses!2ses" 
+            width="600" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+    </div>
 
 
             <h1></h1><i class="fa-solid fa-map-pin"tyle="color: #636363; margin-right: 8px;"></i> Av. de Cervantes, 50, Local 2, 28880 Meco, Madrid</h1>
