adding inmobiliaria page

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <div class="imagenes">
     <a href="servicios.html"><img src="IMAGENES/declaracionrenta.png" alt="Error al cargar la imagen"></a>
     <a href="servicios.html"><img src="IMAGENES/Herencias.png" alt="Error al cargar la imagen"></a>
+    <a href="inmobiliaria.html"><img src="IMAGENES/inmobiliaria.png" alt="Error al cargar la imagen"></a>
   </div>
 
   <h2>¿Por qué elegirnos?</h2>
