--- a/inmobiliaria.html
+++ b/inmobiliaria.html
@@ -6,6 +6,7 @@
     <title>Asesoria Vidal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleindex.css">
+    <link rel="stylesheet" href="styleinmobiliaria.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -28,6 +29,11 @@
         <!-- Botón hamburguesa -->
     <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
 </header>
+
+<div class="img-wrap">
+    <img src="IMAGENES/inmobwtex.jpg" alt="Error al cargar la imagen">
+</div>
+
 <script>
         document.addEventListener("DOMContentLoaded", function () {
     const toggleButton = document.querySelector(".menu-toggle");
