borrado last call

--- a/inmobiliaria.html
+++ b/inmobiliaria.html
@@ -30,7 +30,7 @@
     <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
 </header>
 
-<div class="img-wrap">
+<div class="contenedor">
     <img src="IMAGENES/inmobwtex.jpg" alt="Error al cargar la imagen">
 </div>
 
