--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
   <div class="imagenes">
     <a href="servicios.html"><img src="IMAGENES/sociedades.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html"><img src="IMAGENES/fiscal.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html"><img src="IMAGENES/laboral.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html"><img src="IMAGENES/contabilidad.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html#fiscal"><img src="IMAGENES/Lfiscal.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html#laboral"><img src="IMAGENES/Llaboral.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html#contable"><img src="IMAGENES/Lconatble.png" alt="Error al cargar la imagen"></a>
   </div>
 
   <h2>Y otros servicios</h2>
