--- a/servicios.html
+++ b/servicios.html
@@ -48,7 +48,7 @@
  </section>
 
   <section id="servicios">
-    <div class="servicio izquierda">
+    <div class="servicio izquierda" id="fiscal">
       <div class="caja">
       <h3>Asesoría Fiscal</h3>
       <p>
@@ -65,7 +65,7 @@
     </div>
 
     <div class="servicio derecha">
-      <div class="caja">
+      <div class="caja" id="contable">
       <h3>Asesoría Contable</h3>
       <p>
         Llevamos tu contabilidad con rigor, transparencia y puntualidad. Te ofrecemos información clave para entender la evolución de tu negocio y tomar decisiones basadas en datos reales.
@@ -80,7 +80,7 @@
     </div>
 
     <div class="servicio izquierda">
-      <div class="caja">
+      <div class="caja" id="laboral">
       <h3>Asesoría Laboral</h3>
       <p>
         Te apoyamos en toda la gestión de tu equipo humano, desde la contratación hasta la gestión de nóminas. Garantizamos el cumplimiento de la normativa laboral y te ayudamos a crear relaciones laborales estables y bien gestionadas.
