--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h2>Nuestras áreas de especialización</h2>
 
   <div class="imagenes">
-    <a href="servicios.html"><img src="IMAGENES/sociedades.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html"><img src="IMAGENES/lsociedades.png" alt="Error al cargar la imagen"></a>
     <a href="servicios.html#fiscal"><img src="IMAGENES/Lfiscal.png" alt="Error al cargar la imagen"></a>
     <a href="servicios.html#laboral"><img src="IMAGENES/Llaboral.png" alt="Error al cargar la imagen"></a>
     <a href="servicios.html#contable"><img src="IMAGENES/Lconatble.png" alt="Error al cargar la imagen"></a>
@@ -52,9 +52,9 @@
   <h2>Y otros servicios</h2>
 
   <div class="imagenes">
-    <a href="servicios.html"><img src="IMAGENES/declaracionrenta.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html"><img src="IMAGENES/Herencias.png" alt="Error al cargar la imagen"></a>
-    <a href="inmobiliaria.html"><img src="IMAGENES/inmobiliaria.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html"><img src="IMAGENES/ldeclaracion.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html"><img src="IMAGENES/lherencias.png" alt="Error al cargar la imagen"></a>
+    <a href="inmobiliaria.html"><img src="IMAGENES/linmobiliaria.png" alt="Error al cargar la imagen"></a>
   </div>
 
  <script>
