--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
     <h2>Nuestras áreas de especialización</h2>
 
   <div class="imagenes">
-    <a href="servicios.html"><img src="IMAGENES/lsociedades.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html#fiscal"><img src="IMAGENES/Lfiscal.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html#laboral"><img src="IMAGENES/Llaboral.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html#contable"><img src="IMAGENES/Lconatble.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html"><img src="IMAGENES/lsociedades (1).png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html#fiscal"><img src="IMAGENES/Lfiscal (1).png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html#laboral"><img src="IMAGENES/Llaboral (1).png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html#contable"><img src="IMAGENES/Lcontable (1).png" alt="Error al cargar la imagen"></a>
   </div>
 
   <h2>Y otros servicios</h2>
 
   <div class="imagenes">
-    <a href="servicios.html"><img src="IMAGENES/ldeclaracion.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html"><img src="IMAGENES/lherencias.png" alt="Error al cargar la imagen"></a>
-    <a href="inmobiliaria.html"><img src="IMAGENES/linmobiliaria.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html"><img src="IMAGENES/ldeclaracion (1).png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html"><img src="IMAGENES/lherencias (1).png" alt="Error al cargar la imagen"></a>
+    <a href="inmobiliaria.html"><img src="IMAGENES/linmobiliaria (2).png" alt="Error al cargar la imagen"></a>
   </div>
 
  <script>
