--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <h2>Y otros servicios</h2>
 
   <div class="imagenes">
-    <a href="servicios.html"><img src="IMAGENES/ldeclaracion (1).png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html"><img src="IMAGENES/Ldeclaracion.png" alt="Error al cargar la imagen"></a>
     <a href="servicios.html"><img src="IMAGENES/lherencias (1).png" alt="Error al cargar la imagen"></a>
     <a href="inmobiliaria.html"><img src="IMAGENES/linmobiliaria (2).png" alt="Error al cargar la imagen"></a>
   </div>
@@ -69,3 +69,4 @@
 </script> 
 </body>
 </html>
+
