quitada imagen apreton

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
 
 <div class="content">
     <div class="text-box">
-        <h1>Tu tranquilidad fiscal, laboral y contable en manos de expertas.</h1>
-        <p>Simplificamos tus obligaciones, optimizamos recursos <br> 
-        y garantizamos el cumplimiento normativo, 
-        <br> para que tú solo te enfoques en crecer.</p>
-        <h1>Más de 20 años de experiencia</h1>
+        <div class="text-background">
+            <h1>Tu tranquilidad fiscal, laboral y contable en manos de expertas.</h1>
+            <p>Simplificamos tus obligaciones, optimizamos recursos <br> 
+            y garantizamos el cumplimiento normativo, 
+            <br> para que tú solo te enfoques en crecer.</p>
+            <h1>Más de 20 años de experiencia</h1>
+        </div>
     </div>
-   
 </div>
+
 
     <h2>Nuestras áreas de especialización</h2>
 
