--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </div>
 
 
-    <h2>Nuestras áreas de especialización</h2>
+    <h2>Áreas de especialización</h2>
 
   <div class="imagenes">
     <a href="servicios.html"><img src="IMAGENES/lsociedades (1).png" alt="Error al cargar la imagen"></a>
@@ -51,7 +51,7 @@
     <a href="servicios.html#contable"><img src="IMAGENES/Lcontable (1).png" alt="Error al cargar la imagen"></a>
   </div>
 
-  <h2>Y otros servicios</h2>
+  <h2>Otros servicios</h2>
 
   <div class="imagenes">
     <a href="servicios.html"><img src="IMAGENES/Ldeclaracion.png" alt="Error al cargar la imagen"></a>
