--- a/servicios.html
+++ b/servicios.html
@@ -125,6 +125,18 @@
         <li>Presentación telemática ante la Agencia Tributaria</li>
         <li>Revisión de borradores y declaraciones anteriores</li>
       </ul>
+
+      <h4>Viges inmobiliaria </h4>
+      <p>
+        Nuevo servicio inmobiliario para ofrecerte una atención clara, cercana y transparente en la compra o venta
+        de tu vivienda. Nos ocupamos de cada detalle para que el proceso sea ágil, seguro y sin complicaciones:
+      </p>
+      <ul>
+        <li>Asesoramiento personalizado en la compraventa de inmuebles</li>
+        <li>Valoración realista y competitiva de tu vivienda</li>
+        <li>Gestión integral de visitas, documentación y trámite</li>
+        <li>Acompañamiento durante todo el proceso, hasta la firma de la operación</li>
+      </ul>
     </div>
     </section>
 
