--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <h2>Otros servicios</h2>
 
   <div class="imagenes">
-    <a href="servicios.html"><img src="IMAGENES/Ldeclaracion.png" alt="Error al cargar la imagen"></a>
-    <a href="servicios.html"><img src="IMAGENES/lherencias (1).png" alt="Error al cargar la imagen"></a>
-    <a href="inmobiliaria.html"><img src="IMAGENES/linmobiliaria (2).png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html#declaracion"><img src="IMAGENES/Ldeclaracion.png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html#herencias"><img src="IMAGENES/lherencias (1).png" alt="Error al cargar la imagen"></a>
+    <a href="inmobiliaria.html#inmobiliaria"><img src="IMAGENES/linmobiliaria (2).png" alt="Error al cargar la imagen"></a>
   </div>
 
  <script>
