--- a/servicios.html
+++ b/servicios.html
@@ -102,7 +102,7 @@
         Además de nuestras áreas principales, ofrecemos servicios adicionales tanto para empresas como para particulares:
       </p>
 
-      <h4>Gestión de Herencias</h4>
+      <h4 id="herencias">Gestión de Herencias</h4> 
       <p>
         Acompañamos a familias y herederos en todo el proceso legal y administrativo relacionado con una herencia, 
         con sensibilidad, profesionalismo y claridad. Nos encargamos de:
@@ -114,7 +114,7 @@
         <li>Reparto de bienes y actualización de titularidades</li>
       </ul>
 
-      <h4>Campaña de la Declaración de la Renta</h4>
+      <h4 id="declaracion">Campaña de la Declaración de la Renta</h4>
       <p>
         Durante el periodo de campaña fiscal, te ofrecemos un servicio ágil y fiable para la presentación de tu IRPF, 
         adaptado tanto a trabajadores por cuenta ajena como a autónomos y personas con situaciones fiscales específicas:
@@ -126,7 +126,7 @@
         <li>Revisión de borradores y declaraciones anteriores</li>
       </ul>
 
-      <h4>Viges inmobiliaria </h4>
+      <h4 id="inmobiliaria">Viges inmobiliaria</h4>
       <p>
         Nuevo servicio inmobiliario para ofrecerte una atención clara, cercana y transparente en la compra o venta
         de tu vivienda. Nos ocupamos de cada detalle para que el proceso sea ágil, seguro y sin complicaciones:
