--- a/servicios.html
+++ b/servicios.html
@@ -141,15 +141,17 @@
     </section>
 
     <div class="cta-container">
-      <h3>¿Necesitas apoyo profesional para tu negocio o tu situación personal?</h3>
-      <p>
-        📞 <strong>Contáctanos hoy mismo</strong> y recibe una atención personalizada, cercana y eficiente.<br />
-        📧 <strong>Solicita tu presupuesto sin compromiso</strong> o agenda una primera consulta gratuita.<br />
-        👉 Estamos aquí para ayudarte a gestionar, crecer y cumplir.
-      </p>
-      <a href="contacto.html" class="cta-button">Solicita Presupuesto</a>
-    </div>
-<script>
+  <h3>¿Necesitas apoyo profesional para tu negocio o tu situación personal?</h3>
+  <p>
+    📞 <strong>Contáctanos hoy mismo</strong> y recibe una atención personalizada, cercana y eficiente.<br />
+    📧 <strong>Solicita tu presupuesto sin compromiso</strong> o agenda una primera consulta gratuita.<br />
+    👉 Estamos aquí para ayudarte a gestionar, crecer y cumplir.
+  </p>
+  <!-- Botón con ícono de correo -->
+  <a href="mailto:asesoria@sanchezvidalasesores.com?subject=Solicitud%20de%20presupuesto" class="cta-button">
+    📧 Solicita Presupuesto
+  </a>
+</div>
         document.addEventListener("DOMContentLoaded", function () {
     const toggleButton = document.querySelector(".menu-toggle");
     const nav = document.querySelector(".nav");
