--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="imagenes">
     <a href="servicios.html#declaracion"><img src="IMAGENES/Ldeclaracion.png" alt="Error al cargar la imagen"></a>
     <a href="servicios.html#herencias"><img src="IMAGENES/lherencias (1).png" alt="Error al cargar la imagen"></a>
-    <a href="inmobiliaria.html#inmobiliaria"><img src="IMAGENES/linmobiliaria (2).png" alt="Error al cargar la imagen"></a>
+    <a href="servicios.html#inmobiliaria"><img src="IMAGENES/linmobiliaria (2).png" alt="Error al cargar la imagen"></a>
   </div>
 
  <script>
