--- a/servicios.html
+++ b/servicios.html
@@ -152,6 +152,8 @@
     📧 Solicita Presupuesto
   </a>
 </div>
+
+<script>
         document.addEventListener("DOMContentLoaded", function () {
     const toggleButton = document.querySelector(".menu-toggle");
     const nav = document.querySelector(".nav");
