--- a/contacto.html
+++ b/contacto.html
@@ -52,6 +52,30 @@
   </div>
 </section>
 
+<section class="extra-section">
+  <div class="map-container">
+    <div class="map-responsive">
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.2966412736923!2d-3.3286219244650574!3d40.55712604708323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd424c8f591ece6d%3A0x3f5f7e41ad666970!2sAsesor%C3%ADa%20Vidal!5e0!3m2!1ses!2ses!4v1751478744748!5m2!1ses!2ses" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+
+    <!-- Horario profesional integrado -->
+    <div class="horario">
+      <h4>Horario de Atención</h4>
+      <ul>
+        <li>Lunes a Jueves: 09:00 - 15:00</li>
+        <li>Viernes: 9:00 - 14:00</li>
+        <li>Sábados & Domingos: Cerrado</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+
 <h2>Puedes contactarnos via</h2>
 
 
