--- a/contacto.html
+++ b/contacto.html
@@ -28,7 +28,18 @@
     <button class="menu-toggle" aria-label="Abrir menú">&#9776;</button>
 </header>
 
-<section class="extra-section">
+<section class="horario-section">
+  <div class="horario-container">
+    <h2>Horario de Atención</h2>
+    <ul>
+      <li><strong>Lunes a Jueves:</strong> 09:00 - 15:00</li>
+      <li><strong>Viernes:</strong> 09:00 - 15:00</li>
+      <li><strong>Sábados & Domingos:</strong> Cerrado</li>
+    </ul>
+  </div>
+</section>
+
+<section class="map-section">
   <div class="map-container">
     <div class="map-responsive">
       <iframe 
@@ -38,20 +49,11 @@
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
     </div>
-     <p class="direccion">
+    <br>
+    <p class="direccion">
         <i class="fa-solid fa-map-pin"></i>
         Av. de Cervantes, 50, Local 2, 28880 Meco, Madrid
       </p>
-
-    <!-- Horario profesional integrado -->
-    <div class="horario">
-      <h4>Horario de Atención</h4>
-      <ul>
-        <li>Lunes a Jueves: 09:00 - 15:00</li>
-        <li>Viernes: 9:00 - 14:00</li>
-        <li>Sábados & Domingos: Cerrado</li>
-      </ul>
-    </div>
   </div>
 </section>
 
