--- a/contacto.html
+++ b/contacto.html
@@ -62,21 +62,31 @@
 
 
     <div class="contact-container">
-        <div class="contact-item">
-            <i class="fa fa-phone"></i>
-            <p>91 878 26 33</p>
-        </div>
-    <div class="contact-item">
-        <i class="fa fa-envelope"></i>
-        <p>asesoria@sanchezvidalasesores.com</p>
-    </div>
-        <div class="contact-item">
-            <a href="https://www.instagram.com/asesoriavidal/" target="_blank" style= "color: black; text-decoration: none;">
-            <i class="fa-brands fa-instagram"></i>
-            <p>@asesoriavidal</p>
-            </a>
-        </div>
-    </div>
+  <!-- Teléfono -->
+  <div class="contact-item">
+    <a href="tel:+34918782633" style="color: inherit; text-decoration: none;">
+      <i class="fa fa-phone"></i>
+      <p>91 878 26 33</p>
+    </a>
+  </div>
+
+  <!-- Correo -->
+  <div class="contact-item">
+    <a href="mailto:asesoria@sanchezvidalasesores.com" style="color: inherit; text-decoration: none;">
+      <i class="fa fa-envelope"></i>
+      <p>asesoria@sanchezvidalasesores.com</p>
+    </a>
+  </div>
+
+  <!-- Instagram -->
+  <div class="contact-item">
+    <a href="https://www.instagram.com/asesoriavidal/" target="_blank" style="color: inherit; text-decoration: none;">
+      <i class="fa-brands fa-instagram"></i>
+      <p>@asesoriavidal</p>
+    </a>
+  </div>
+</div>
+
 
 <h2>Y si aún tienes dudas, esto es lo que nuestros clientes opinan</h2>
     
