--- a/contacto.html
+++ b/contacto.html
@@ -41,6 +41,7 @@
 
 <section class="map-section">
   <div class="map-container">
+    <a href="https://www.google.com/maps/dir/?api=1&destination=Av.+de+Cervantes+50,+Meco,+Madrid" target="_blank">
     <div class="map-responsive">
       <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.2966412736923!2d-3.3286219244650574!3d40.55712604708323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd424c8f591ece6d%3A0x3f5f7e41ad666970!2sAsesor%C3%ADa%20Vidal!5e0!3m2!1ses!2ses!4v1751478744748!5m2!1ses!2ses" 
@@ -54,6 +55,7 @@
         <i class="fa-solid fa-map-pin"></i>
         Av. de Cervantes, 50, Local 2, 28880 Meco, Madrid
       </p>
+    </a>
   </div>
 </section>
 
