--- a/servicios.html
+++ b/servicios.html
@@ -137,6 +137,7 @@
         <li>Gestión integral de visitas, documentación y trámite</li>
         <li>Acompañamiento durante todo el proceso, hasta la firma de la operación</li>
       </ul>
+      <p>Si quieres saber más visita nuestra pagina <a href="../Viges%20Inmobiliaria/index.html">aquí.</a></p>
     </div>
     </section>
 
