--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="servicios.html">Servicios</a></li>
-            <!-- <li><a href="equipo.html">Equipo</a></li> -->
+            <a href="equipo.html">Equipo</a></li>
             <!--<li><a href="inmobiliaria.html">Inmobiliaria</a></li> -->
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
